refactored code so LinkedList and Stack work together